paths/static/assets/styles/signup.css
:root {
    --font-color: #000000;
}

@font-face {
    font-family: 'Kollektif';
    src: url('../fonts/Kollektif.ttf');
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

html {
    font-size: 62.5%;
    scroll-behavior: smooth;
}
body {
    image-rendering: crisp-edges;
    background-color: #024f97;
    font-size: 0px;
}
a {
    text-decoration: none;
    color: unset;
}
a:hover {
    text-decoration: underline;
}
.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Old versions of Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
}



.title {
    margin-top: 1rem;
    font-family: 'Kollektif', sans-serif;
    text-align: center;
    font-size: 4rem;
    color: #ffffff;
}
.title span {
    font-size: 4.5rem;
}
.subtitle {
    margin-top: 1rem;
    font-family: 'Kollektif', sans-serif;
    text-align: center;
    font-size: 2rem;
    color: #ffffff;
}

button {
    padding: 0.75rem 4rem;
    border: unset;
    border-radius: 10rem;
    font-size: 1.75rem;
    color: #ffffff;
    cursor: pointer;
}


#welcomeCard {
    height: 100vh;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    position: absolute;
}
#welcomeCard div img {
    width: 30rem;
}
#newHere {
    color: #ffffff;
    font-size: 2rem;
}
#newHere button {
    background-color: #ffffff;
    color: #000000;
}
#newHere button a {
    text-decoration: none;
}



#signupCard {
    height: 100vh;
    width: 600px;
    max-width: 100%;
    top: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;
    background-color: #01284D;
    z-index: 2;
}
#content {
    height: min-content;
    width: 100%;
}
#header {
    margin-bottom: 4rem;
    font-size: 4rem;
    color: #ffffff;
    text-align: center;
}
#header div {
    margin: 1rem 0;
}
#signupCard .title img {
    vertical-align: middle;
    width: 10rem;
}

#content form {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}
#content form div {
    width: 70%;
    margin: 1rem 0;
    position: relative;
}
#content form input {
    width: 100%;
    padding: 1rem 2rem;
    border: none;
    border-radius: 10rem;
    outline: none;
    font-size: 1.75rem;
}

#promptContainer {
    margin: 0 0 !important;
}

#passwordContainer {
    text-align: left;
}
#passwordContainer span {
    height: min-content;
    border-radius: 10rem;
    display: block;
    background-color: #ffffff;
}
#password {
    padding-right: 5rem !important;
}
#eyeIcon {
    display: none;
    cursor: pointer;
}
#passwordContainer img {
    width: 3rem;
    top: 0;
    right: 0;
    position: absolute;
}
#prompt {
    margin-bottom: 2rem;
    font-size: 1.75rem;
    color: #ff0000;
    opacity: 0;
    text-align: center;
}

#content form div button {
    background-color: #024f97;
    color: #ffffff;
}

#content a {
    width: 100%;
    font-size: 1.5rem;
    display: block;
    color: #ffffff;
    text-align: center;
}
#content a[href="./forgot"] {
    margin-top: 1rem;
}
#content a[href="./signup"] {
    margin-top: 1rem;
}

@media screen and (max-width: 1000px) {
    #signupCard {
        width: 450px;
    }
}
@media screen and (max-width: 750px) {
    #signupCard {
        width: 350px;
    }
}
@media screen and (max-width: 700px) {
    #content form div {
        width: 80%;
        margin: 0.5rem 0;
    }
    #signupCard {
        width: 100%;
    }
}

@media screen and (min-width: 700px) {
    #signupCard .title {
        display: none;
    }
    #content a[href="./signup"] {
        display: none;
    }
}



/* -=-=-=-=-=-=-=-=-=-= Very Hacky Thing to do starts =-=-=-=-=-=-=-=-=-=- */
#signupCard form .signupInput::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: #00000080;
    opacity: 1; /* Firefox */
}
#signupCard form .signupInput:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: #00000080;
}
#signupCard form .signupInput::-ms-input-placeholder { /* Microsoft Edge */
    color: #00000080;
}
/* -=-=-=-=-=-=-=-=-=-= Very Hacky Thing to do ending =-=-=-=-=-=-=-=-=-=- */

